@@ -723,6 +723,12 @@ the translation server. \\
 
 \hline
 
+\texttt{FILTER\_4XX} & Enable filtering of client errors (status 4xx).
+Without this flag, only successful responses (2xx) are filtered.  Only
+useful when at least one \texttt{FILTER} was specified. \\
+
+\hline
+
 \texttt{PROCESS} & enables the \emph{beng-proxy} processor, see
 section \ref{processor} \\
 
