@@ -65,6 +65,7 @@ TRANSLATE_AUTHORIZATION = 58
 TRANSLATE_HEADER = 59
 TRANSLATE_UNTRUSTED_PREFIX = 60
 TRANSLATE_SECURE_COOKIE = 61
+TRANSLATE_FILTER_4XX = 62
 
 HEADER_FORWARD_NO = 0
 HEADER_FORWARD_YES = 1
